[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mineru-parser"
version = "1.5.0"
description = "使用 MinerU API 解析 PDF 为 Markdown，支持页眉、页脚、页码、脚注"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "mineru-parser contributors"},
    {name = "kimi-code"},
    {name = "kimi-k2.7"},
]
keywords = ["pdf", "markdown", "mineru", "ocr", "parser"]
dependencies = [
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "requests>=2.28.0",
    "PyYAML>=6.0",
    "Pillow>=10.0.0",
    "pypdf>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
mineru-parse = "mineru_parser.cli:app"

[tool.setuptools.packages.find]
include = ["mineru_parser*"]

[tool.setuptools.package-data]
mineru_parser = ["default_config.yml"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["."]
